--- a/mumuinput/css/style.css
+++ b/mumuinput/css/style.css
@@ -87,6 +87,12 @@ body {
   font-size: 25px;
   text-align: left;
 }
+.v-center {
+  position: relative;
+  display: block;
+  top: 50%;
+  margin-top: -12.5px;
+}
 .hidden {
   display: none;
   width: 0;
@@ -101,7 +107,7 @@ label {
 #button-row > .button,
 #button-row > label {
   height: 100%;
-  width: 25%;
+  width: 20%;
   padding: 0;
 }
 #input-area {
