--- a/mumuinput/css/style.css
+++ b/mumuinput/css/style.css
@@ -12,6 +12,51 @@ body {
 * {
   box-sizing: border-box;
 }
+#button-row {
+  height: 15%;
+}
+#button-row > .button,
+#button-row > label {
+  height: 100%;
+  width: 20%;
+  padding: 0;
+}
+#input-area {
+  height: 80%;
+}
+#input-area > .button {
+  height: 100%;
+  width: 50%;
+}
+#status {
+  width: 100%;
+  height: 5%;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  vertical-align: middle;
+}
+#status.disconnected {
+  background-color: #aaaaaa;
+}
+#status.connected {
+  background-color: #00ff00;
+}
+#status.error {
+  background-color: #ff0000;
+}
+#portrait-warning {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+#portrait-warning.input-disabled {
+  background: white url('../img/no-controller.png') no-repeat center;
+  background-size: 128px 128px;
+  display: block;
+}
 .no-select,
 .no-select * {
   -webkit-touch-callout: none;
@@ -69,12 +114,15 @@ body {
   color: #2d2d2d;
   background-color: #f5f5f5;
   padding: 20px 50px;
+  border: 1px solid black;
   border-radius: 3px;
+  overflow-x: hidden;
+  overflow-y: scroll;
   position: relative;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
+  top: 15%;
+  left: 0;
+  width: 100%;
+  height: 85%;
   z-index: 2;
 }
 .dialog * {
@@ -100,49 +148,4 @@ body {
 }
 label {
   text-align: center;
-}
-#button-row {
-  height: 15%;
-}
-#button-row > .button,
-#button-row > label {
-  height: 100%;
-  width: 20%;
-  padding: 0;
-}
-#input-area {
-  height: 80%;
-}
-#input-area > .button {
-  height: 100%;
-  width: 50%;
-}
-#status {
-  width: 100%;
-  height: 5%;
-  position: fixed;
-  bottom: 0;
-  text-align: center;
-  vertical-align: middle;
-}
-#status.disconnected {
-  background-color: #aaaaaa;
-}
-#status.connected {
-  background-color: #00ff00;
-}
-#status.error {
-  background-color: #ff0000;
-}
-#portrait-warning {
-  z-index: 1;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  display: none;
-}
-#portrait-warning.input-disabled {
-  background: white url('../img/no-controller.png') no-repeat center;
-  background-size: 128px 128px;
-  display: block;
 }
