--- a/mumuinput/css/style.css
+++ b/mumuinput/css/style.css
@@ -4,18 +4,27 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  background-color: gray;
   color: white;
-  font-family: sans-serif;
+  font-family: 'Exo 2', sans-serif;
   font-size: 25px;
-  background-color: black;
+}
+body {
+  background-image: url('../img/background.png');
 }
 * {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   box-sizing: border-box;
 }
 #button-row {
   height: 15%;
 }
-#button-row > .button,
+#button-row > .medium-button,
 #button-row > label {
   height: 100%;
   width: 20%;
@@ -24,7 +33,7 @@ body {
 #input-area {
   height: 80%;
 }
-#input-area > .button {
+#input-area > .big-button {
   height: 100%;
   width: 50%;
 }
@@ -57,8 +66,7 @@ body {
   background-size: 128px 128px;
   display: block;
 }
-.no-select,
-.no-select * {
+.no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -78,28 +86,71 @@ body {
 .clear:after {
   content: '';
 }
-.button {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.big-button {
   display: inline-block;
   text-align: center;
-  color: #2d2d2d;
-  background-color: #f5f5f5;
   padding: 5px 10px;
   border: 1px solid black;
-  border-radius: 3px;
+  border-image: url('../img/buttons/big/normal.png') 100 fill;
+  border-image-width: 100;
 }
-.button:hover:not(.no-hover) {
+.big-button:hover:not(.no-hover) {
   cursor: pointer;
-  background-color: #ffffff;
 }
-.button:active:not(.no-hover) {
+.big-button:active:not(.no-hover) {
   cursor: pointer;
-  background-color: #c2c2c2;
+  border-image: url('../img/buttons/big/pressed.png') 100 fill;
+  border-image-width: 100;
+}
+.big-button img {
+  pointer-events: none;
+  position: relative;
+  top: 25%;
+  height: 50%;
+}
+.medium-button {
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px;
+  border: 1px solid black;
+  border-image: url('../img/buttons/medium/normal.png') 50 fill;
+  border-image-width: 50;
+}
+.medium-button:hover:not(.no-hover) {
+  cursor: pointer;
+}
+.medium-button:active:not(.no-hover) {
+  cursor: pointer;
+  border-image: url('../img/buttons/medium/pressed.png') 50 fill;
+  border-image-width: 50;
+}
+.medium-button img {
+  pointer-events: none;
+  position: relative;
+  top: 10%;
+  height: 80%;
+}
+.small-button {
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px;
+  border: 1px solid black;
+  border-image: url('../img/buttons/small/normal.png') 44 fill;
+  border-image-width: 44;
+}
+.small-button:hover:not(.no-hover) {
+  cursor: pointer;
+}
+.small-button:active:not(.no-hover) {
+  cursor: pointer;
+  border-image: url('../img/buttons/small/pressed.png') 44 fill;
+  border-image-width: 44;
+}
+.small-button img {
+  pointer-events: none;
+  position: relative;
+  top: 10%;
+  height: 80%;
 }
 .dialog-container {
   background-color: rgba(128, 128, 128, 0.6);
@@ -132,6 +183,7 @@ body {
 .label {
   display: block;
   width: 100%;
+  font-family: inherit;
   font-size: 25px;
   text-align: left;
 }
