--- a/beatlib/doc/style/style.css
+++ b/beatlib/doc/style/style.css
@@ -22,15 +22,29 @@ div.qmlproto {
 }
 
 pre, div.qmlproto {
-    font-family: "Courier New";
-    font-size: 1em;
+    font-family: monospace;
+    font-size: 1.2em;
     margin-left: 1em;
+    background-color: #F2F2F2;
+}
+
+code {
+    font-family: monospace;
+    font-size: 1.2em;
     background-color: #F2F2F2;
 }
 
 hr {
     margin-top: 2em;
     margin-bottom: 2em;
+}
+
+.type {
+    color: green;
+}
+
+.qmlreadonly {
+    color: #666;
 }
 
 p.header {
